# ninjademo

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
demo/: views.py
demo/dtos/: sum.py
demo/usecases/: sum.py
ninjad/: asgi.py  settings.py  urls.py  wsgi.py
